feat(domain): Add comprehensive domain redirect configuration
- Create domain redirect setup for stlouisdemojhs.com → www.stlouisdemojhs.com
- Add redirect configuration files for multiple hosting platforms:
* Netlify (_redirects and netlify.toml)
* Vercel (vercel.json)
* Apache (.htaccess)
* Firebase (firebase.json)
- Implement 301 permanent redirects with SEO best practices
- Create detailed documentation in REDIRECT_QUICK_GUIDE.md and DOMAIN_REDIRECT_SETUP.md
- Ensure cross-platform compatibility and consistent redirect behavior
- Add comprehensive testing and configuration instructions for DNS and hosting providers

--- a/index.html
+++ b/index.html
@@ -1,127 +1,133 @@
 <!doctype html>
 <html lang="en" prefix="og: https://ogp.me/ns#">
-  <head>
-    <meta charset="UTF-8" />
 
-    <!-- Primary Meta Tags -->
-    <title>ST. LOUIS DEMONSTRATION J.H.S - Leading Education</title>
-    <meta name="title" content="ST. LOUIS DEMONSTRATION J.H.S - Leading Education" />
-    <meta name="description" content="St. Louis Demonstration JHS is a premier educational institution in Ghana, offering quality junior high school education with modern facilities, experienced teachers, and comprehensive academic programs." />
-    <meta name="keywords" content="St. Louis Demonstration JHS, junior high school Ghana, quality education Ghana, JHS Ghana, secondary education, academic excellence, STEM education, student resources, Ghana education" />
-    <meta name="author" content="St. Louis Demonstration JHS" />
-    <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
+<head>
+  <meta charset="UTF-8" />
 
-    <!-- Viewport and Mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Best School in Ghana - SLDJHS" />
-    <meta name="application-name" content="Best School in Ghana - SLDJHS" />
+  <!-- Primary Meta Tags -->
+  <title>ST. LOUIS DEMONSTRATION J.H.S - Leading Education</title>
+  <meta name="title" content="ST. LOUIS DEMONSTRATION J.H.S - Leading Education" />
+  <meta name="description"
+    content="St. Louis Demonstration JHS is a premier educational institution in Ghana, offering quality junior high school education with modern facilities, experienced teachers, and comprehensive academic programs." />
+  <meta name="keywords"
+    content="St. Louis Demonstration JHS, junior high school Ghana, quality education Ghana, JHS Ghana, secondary education, academic excellence, STEM education, student resources, Ghana education" />
+  <meta name="author" content="St. Louis Demonstration JHS" />
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
 
-    <!-- Theme and Colors -->
-    <meta name="theme-color" content="#1a1a1a" />
-    <meta name="msapplication-TileColor" content="#1a1a1a" />
-    <meta name="msapplication-navbutton-color" content="#1a1a1a" />
+  <!-- Viewport and Mobile -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Best School in Ghana - SLDJHS" />
+  <meta name="application-name" content="Best School in Ghana - SLDJHS" />
 
-    <!-- Favicon and Icons - Google Search Compatible -->
-    <!-- Primary favicon for Google Search (recommended 48x48px+) -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+  <!-- Theme and Colors -->
+  <meta name="theme-color" content="#1a1a1a" />
+  <meta name="msapplication-TileColor" content="#1a1a1a" />
+  <meta name="msapplication-navbutton-color" content="#1a1a1a" />
 
-    <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png" />
+  <!-- Favicon and Icons - Google Search Compatible -->
+  <!-- Primary favicon for Google Search (recommended 48x48px+) -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="shortcut icon" href="/favicon.ico" />
 
-    <!-- Android Chrome Icons -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png" />
+  <!-- Apple Touch Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png" />
 
-    <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json" />
+  <!-- Android Chrome Icons -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png" />
 
-    <!-- Preload Critical Resources -->
-    <link
-      rel="preload"
-      href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs"
-      as="image"
-      type="image/png"
-    />
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json" />
 
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://stlouisdemojhs.com/" />
+  <!-- Preload Critical Resources -->
+  <link rel="preload" href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs" as="image"
+    type="image/png" />
 
-    <!-- Sitemap -->
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+  <!-- Canonical URL - Always use www version -->
+  <link rel="canonical" href="https://www.stlouisdemojhs.com/" />
 
-    <!-- Performance and Preconnect -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://6z76leifsf.ufs.sh" />
-    <link rel="dns-prefetch" href="//www.google-analytics.com" />
-    <link rel="dns-prefetch" href="//www.googletagmanager.com" />
-    <link rel="dns-prefetch" href="//connect.facebook.net" />
+  <!-- Sitemap -->
+  <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
+  <!-- Performance and Preconnect -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://6z76leifsf.ufs.sh" />
+  <link rel="dns-prefetch" href="//www.google-analytics.com" />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+  <link rel="dns-prefetch" href="//connect.facebook.net" />
 
-    <!-- Geo and Location Meta -->
-    <meta name="geo.region" content="GH" />
-    <meta name="geo.country" content="Ghana" />
-    <meta name="geo.placename" content="Accra" />
-    <meta name="ICBM" content="5.6037,-0.1870" />
+  <!-- Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
 
-    <!-- Educational Meta -->
-    <meta name="education.level" content="Junior High School" />
-    <meta name="education.type" content="Secondary Education" />
-    <meta name="institution.type" content="Educational" />
-    <meta name="audience" content="Students, Parents, Educators" />
+  <!-- Geo and Location Meta -->
+  <meta name="geo.region" content="GH" />
+  <meta name="geo.country" content="Ghana" />
+  <meta name="geo.placename" content="Accra" />
+  <meta name="ICBM" content="5.6037,-0.1870" />
 
-    <!-- Language and Content -->
-    <meta http-equiv="content-language" content="en" />
-    <meta name="language" content="English" />
-    <meta name="content-type" content="text/html; charset=utf-8" />
+  <!-- Educational Meta -->
+  <meta name="education.level" content="Junior High School" />
+  <meta name="education.type" content="Secondary Education" />
+  <meta name="institution.type" content="Educational" />
+  <meta name="audience" content="Students, Parents, Educators" />
 
-    <!-- Security and Performance -->
-    <meta name="referrer" content="strict-origin-when-cross-origin" />
-    <meta http-equiv="x-dns-prefetch-control" content="on" />
-    <meta name="format-detection" content="telephone=no" />
+  <!-- Language and Content -->
+  <meta http-equiv="content-language" content="en" />
+  <meta name="language" content="English" />
+  <meta name="content-type" content="text/html; charset=utf-8" />
 
-    <!-- Bing Webmaster Tools Verification -->
-    <meta name="msvalidate.01" content="65299BB5AB2F255A66AB23A677D8A9EA" />
+  <!-- Security and Performance -->
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta http-equiv="x-dns-prefetch-control" content="on" />
+  <meta name="format-detection" content="telephone=no" />
 
-    <!-- Google AdSense -->
-    <meta name="google-adsense-account" content="ca-pub-3612569845845172">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3612569845845172"
-         crossorigin="anonymous"></script>
+  <!-- Bing Webmaster Tools Verification -->
+  <meta name="msvalidate.01" content="65299BB5AB2F255A66AB23A677D8A9EA" />
 
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-M82SVKTZ');</script>
-    <!-- End Google Tag Manager -->
+  <!-- Google AdSense -->
+  <meta name="google-adsense-account" content="ca-pub-3612569845845172">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3612569845845172"
+    crossorigin="anonymous"></script>
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9SVFNXDWG0"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-M82SVKTZ');</script>
+  <!-- End Google Tag Manager -->
 
-      gtag('config', 'G-9SVFNXDWG0');
-    </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9SVFNXDWG0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  </head>
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M82SVKTZ"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    gtag('config', 'G-9SVFNXDWG0');
+  </script>
 
-    <div id="root"></div>
+</head>
 
-    <script type="module" src="/src/main.tsx"></script>
+<body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M82SVKTZ" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
-  </body>
+  <div id="root"></div>
+
+  <script type="module" src="/src/main.tsx"></script>
+
+</body>
+
 </html>
