--- a/index.html
+++ b/index.html
@@ -126,6 +126,87 @@
 
   <div id="root"></div>
 
+  <!-- Loading Screen -->
+  <style>
+    #loading-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999999;
+      transition: opacity 0.5s ease-out;
+    }
+
+    #loading-screen.loaded {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    .loading-logo {
+      width: 120px;
+      height: 120px;
+      margin-bottom: 24px;
+      animation: pulse 2s ease-in-out infinite;
+    }
+
+    .loading-text {
+      color: #fff;
+      font-size: 18px;
+      font-weight: 600;
+      margin-bottom: 16px;
+    }
+
+    .loading-spinner {
+      width: 40px;
+      height: 40px;
+      border: 3px solid rgba(255, 255, 255, 0.1);
+      border-top-color: #10b981;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes pulse {
+
+      0%,
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
+
+      50% {
+        transform: scale(1.05);
+        opacity: 0.8;
+      }
+    }
+
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
+  <div id="loading-screen">
+    <img src="/favicon-32x32.png" alt="Loading" class="loading-logo">
+    <div class="loading-text">St. Louis Demo JHS</div>
+    <div class="loading-spinner"></div>
+  </div>
+  <script>
+    window.addEventListener('load', function () {
+      setTimeout(function () {
+        document.getElementById('loading-screen').classList.add('loaded');
+        setTimeout(function () {
+          document.getElementById('loading-screen').remove();
+        }, 500);
+      }, 100);
+    });
+  </script>
+
   <script type="module" src="/src/main.tsx"></script>
 
 </body>
