feat(performance): Enhance cache management and service worker strategy
- Implement dynamic app version tracking for cache invalidation
- Add explicit cache control headers in Firebase configuration
- Update index.html with cache-clearing meta tags
- Modify service worker registration to support version-based updates
- Implement automatic cache and service worker clearing on version change
- Add logging for service worker registration and version updates
- Improve performance by deferring service worker registration
Resolves cache inconsistency and ensures smooth application updates across client environments.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
   <meta name="referrer" content="strict-origin-when-cross-origin" />
   <meta http-equiv="x-dns-prefetch-control" content="on" />
   <meta name="format-detection" content="telephone=no" />
+  
+  <!-- Force cache refresh -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
 
   <!-- Bing Webmaster Tools Verification -->
   <meta name="msvalidate.01" content="65299BB5AB2F255A66AB23A677D8A9EA" />
